# python_studies

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
aulas/: aula003.py  aula010.py  aula011.py  aula015.py  aula017.py  aula018.py  aula021.py  aula023.py  aula025.py  aula026.py  aula027.py  aula033.py  aula034.py  aula038.py  aula044.py  aula045.py  aula048.py  aula049.py  aula051.py  aula052.py  aula055.py  aula056.py  aula057.py  aula059.py  aula060.py  aula063.py  aula065.py  aula066.py  aula071.py  aula073.py  aula074.py  aula076.py  aula078.py  aula079.py  aula081.py  aula083.py  aula084.py  aula087.py  aula090.py  aula091.py  (+5 more)
aulas/aula099_package/: modulo.py
execicios/: aula012.py  aula020.py  aula028.py  aula039.py
exercicios/: aula008.py  aula020.py  aula032_2.py  aula032_3.py  aula047.py  aula062.py  aula072.py  aula077.py
sec03_logica_de_prog/aulas/: aula001.py  aula002.py  aula004.py  aula005.py  aula006.py  aula007.py  aula009.py  aula013.py  aula014.py  aula016.py  aula017.py  aula019.py  aula022.py  aula024.py  aula029.py  aula030.py  aula031.py  aula037.py  aula041.py  aula042.py  aula043.py  aula046.py  aula053.py  aula058.py  aula064.py
sec03_logica_de_prog/exercicios/: aula028.py  aula032_1.py  aula040.py  aula050.py  aula054.py  aula061.py
sec04_intermediario/anotacoes/: closure.py  ex001.py  ex002.py  ex003.py  ordenar.py
sec04_intermediario/aulas/: aula067.py  aula068.py  aula069.py  aula070.py  aula074.py  aula076.py  aula078.py  aula082.py  aula084.py  aula085.py  aula086.py  aula088.py  aula089.py  aula092.py  (+23 more)
(+114 files in other folders)
